--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,12 @@ body {
     overflow: hidden;
     overflow-y: scroll;
 }
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background-color: #0e0e1a; /* Dark navy (you can change this color) */
+}
